--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ serde = { version = "1.0.106", features = ["derive"] }
 serde_urlencoded = "0.7.0"
 rand = "0.7.3"
 serde_qs = "0.7.0"
+base64 = "0.13.0"
 
 [dev-dependencies]
 http = "0.2.0"
